plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.7'
	id 'io.spring.dependency-management' version '1.1.4'
}
//posibilita la creacion del jar file ademas el deploy 
jar {
    enabled = false
    manifest {
        attributes 'Main-Class': 'com.usersantiago.app.SecurityAppApplication' // <-- Please replace with your own main class
    }
}

group = 'com.usersantiago'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Dependencia para PostgreSQL
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.postgresql:postgresql:9.4-1201-jdbc4'
     //Dependencia para Spring JDBC
    implementation 'org.springframework:spring-jdbc:4.0.0.RELEASE'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.23'
	//runtimeOnly 'com.mysql:mysql-connector-j'
	implementation 'org.postgresql:postgresql:42.3.1' // La versión más reciente disponible al momento de tu desarrollo
	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}
